<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.details.DetailActivity">

        <TextView
            android:id="@+id/text_device_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            tools:text="Details for My Home Server" />

        <TextView
            android:id="@+id/text_status_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="Fetching geographical data..."
            android:textSize="18sp"
            android:textStyle="italic" />



        <TextView
            android:id="@+id/text_public_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/label_public_ip"
            tools:text="Public IP: 1.1.1.1" />

        <TextView
            android:id="@+id/text_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/label_city"
            tools:text="City: New York" />

        <TextView
            android:id="@+id/text_region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/label_region"
            tools:text="Region: NY" />

        <TextView
            android:id="@+id/text_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/label_country"
            tools:text="Country: US" />

        <TextView
            android:id="@+id/text_org"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/label_organization"
            tools:text="Organization: Google LLC" />

        <TextView
            android:id="@+id/text_carrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/label_carrier"
            tools:text="Carrier: AT&amp;T Wireless" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>